--- a/Ansible Setup/Playbooks/jenkins-slave-setup.yaml
+++ b/Ansible Setup/Playbooks/jenkins-slave-setup.yaml
@@ -19,4 +19,14 @@
         src: /opt/apache-maven-3.9.6-bin.tar.gz
         dest: /opt 
         remote_src: yes
+        
+    #Installing Docker in Jenkins-Worker machine to create docker images for artifacts.
+    - name: Install Docker
+      apt:
+        name: docker.io
+        state: present
+    - name: Start Docker Service
+      service:
+        name: docker
+        state: started
   
